--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,5 @@
 name  = Graphics-ColorNames-GrayScale
 author  = Robert Rothenberg <rrwo@cpan.org>
-license = Artistic_2_0
 copyright_holder = Robert Rothenberg
 copyright_year   = 2004-2022
 license = Perl_5
@@ -14,7 +13,6 @@ Graphics::ColorNames = 0
 
 [Prereqs / TestRequires]
 Test::More =  1.3
-Test::Pod =   1
 Test::NoWarnings = 1
 
 [MetaNoIndex]
@@ -24,6 +22,7 @@ directory = t
 [MetaProvides::Package]
 
 [Git::GatherDir]
+exclude_match = ^dev
 exclude_filename = README.md
 
 ; use RewriteVersion or VersionFromModule 
@@ -40,17 +39,7 @@ allow_decimal_underscore = 1
 [MakeMaker]
 [License]
 [CPANFile]
-;[Signature]
 
 [TestRelease]
 [ConfirmRelease]
 [UploadToCPAN]
-
-;[PodSyntaxTests]
-;[PodCoverageTests]
-;[Pod2Html]
-; dir = my_docs   ; where to create HTML files
-; ignore = bin/myscript1   ; what input file to ignore
-
-; [=inc::Documentation]
-; module = Chart::Manual
